# CrosswordConstructor

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md
.github/workflows/: ci.yml
backend/: requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_clue_corpus.py  0002_grids.py  0003_solver.py  0004_layouts.py  0005_word_tags.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/ingest/: layouts.py  wordlist.py  xd.py
backend/app/routers/: clue_intel.py  clues.py  entries.py  grids.py  layouts.py  solver.py  wordlist.py  wordtags.py
backend/app/services/: digest.py  entry_stats.py  nyt.py  polls.py  rexparker.py  tag_pipeline.py  word_tags.py
backend/data/word_tags/: chunk_00000.tsv  chunk_00001.tsv  chunk_00002.tsv  chunk_00003.tsv  chunk_00004.tsv  (+2468 more)
backend/scripts/: build_layouts.py  fetch_data.py  ingest_xd.py  retag_words.py  salvage_batches.py  sync_solver.py  tag_wordlist.py
backend/tests/: conftest.py  test_clue_intel_api.py  test_clues_api.py  test_entries_api.py  test_grids_api.py  test_health.py  test_ingest_xd.py  test_layouts.py  test_solver.py  test_tag_wordlist.py  test_word_tag_constants.py  test_wordlist_api.py  test_wordtags_api.py
docs/: decisions.md  grid-editor-spec.md  word-type-filters.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: editor.spec.ts  fill-pencil.spec.ts  fill-tags.spec.ts  fill.spec.ts  quickstart.spec.ts
frontend/scripts/: check-wasm.mjs
rust/fill-wasm/: Cargo.toml
rust/fill-wasm/src/: lib.rs
(+75 files in other folders)
