[package]
name = "fill-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM wrapper around ingrid_core for the in-browser fill engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ingrid_core = "1.3.1"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# ingrid_core → rand 0.8 → getrandom 0.2; the "js" feature wires wasm entropy.
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true

# The published 1.3.1 uses std::time::Instant, which panics on wasm — see
# rust/vendor/ingrid_core/VENDORED.md for the one-line patch.
[patch.crates-io]
ingrid_core = { path = "../vendor/ingrid_core" }
